--- a/nodes/gpio.html
+++ b/nodes/gpio.html
@@ -1,19 +1,20 @@
 <!--
 /*
  * MIT License
+ *
  * Copyright (c) 2019 Seungwoo Hong <qksn1541@gmail.com>
- * Copyright (c) 2019 Hyeonki Hong <hhk7734@gmail.com>
- * 
+ * Copyright (c) 2019-2020 Hyeonki Hong <hhk7734@gmail.com>
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in all
  * copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -25,88 +26,147 @@
 -->
 
 <!--
-    lot: set_pin_mode(pin, mode)
+    lot.Gpio(pin)
+    lot.Gpio.mode(mode)
 -->
 
 <script type="text/javascript">
-    RED.nodes.registerType("lot-set-pin-mode", {
-        category: "gpio",
-        color: "#2266aa",
+    RED.nodes.registerType("lot.Gpio.mode", {
+        category: "lot.Gpio",
+        color: "#aabbee",
         defaults: {
-            name: { value: "" },
-            pin: {
-                value: null,
-                required: true,
-                validate: RED.validators.number()
-            },
-            mode: { value: "OUTPUT", required: true }
+            name: { value: "lot.Gpio.mode" },
+            pin: { value: "", required: true, type: "lot.pin" },
+            mode: { value: "", required: true }
         },
         inputs: 0,
         outputs: 0,
         icon: "cog.svg",
         label: function() {
-            return this.name || "lot-set-pin-mode";
+            return this.name;
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="lot-set-pin-mode">
+<script type="text/x-red" data-template-name="lot.Gpio.mode">
     <div class="form-row">
-        <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="lot.Gpio.mode">
     </div>
     <div class="form-row">
-        <label for="node-input-pin"><i class="icon-tag"></i> Pin</label>
-        <input type="number" id="node-input-pin" placeholder="Pin">
+        <label for="node-input-pin"><i class="fa fa-tag"></i> Pin</label>
+        <input type="number" id="node-input-pin">
     </div>
     <div class="form-row">
-        <label for="node-input-mode"><i class="icon-tag"></i> Mode</label>
-        <input type="text" id="node-input-mode" placeholder="Mode">
+        <label for="node-input-mode"><i class="fa fa-tag"></i> Mode</label>
+        <select type="number" id="node-input-mode">
+            <option value="8">DIN</option>
+            <option value="9">DOUT</option>
+            <option value="10">AIN</option>
+            <option value="11">AOUT</option>
+            <option value="12">PWM</option>
+            <option value="0">ALT0</option>
+            <option value="1">ALT1</option>
+            <option value="2">ALT2</option>
+            <option value="3">ALT3</option>
+            <option value="4">ALT4</option>
+            <option value="5">ALT5</option>
+            <option value="6">ALT6</option>
+            <option value="7">ALT7</option>
+        </select>
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="lot-digital-write">
+<script type="text/x-red" data-help-name="lot.Gpio.mode">
     <p></p>
 </script>
 
 <!--
-    lot: digital_write(pin, status)
--->
+    lot.Gpio.toggle()
+ -->
 
 <script type="text/javascript">
-    RED.nodes.registerType("lot-digital-write", {
-        category: "gpio",
-        color: "#2266aa",
+    RED.nodes.registerType("lot.Gpio.toggle", {
+        category: "lot.Gpio",
+        color: "#aabbee",
         defaults: {
-            name: { value: "" },
-            pin: {
-                value: null,
-                required: true,
-                validate: RED.validators.number()
-            }
+            name: { value: "lot.Gpio.toggle" },
+            pin: { value: "", required: true, type: "lot.pin" }
         },
         inputs: 1,
         outputs: 1,
         icon: "serial.svg",
-        label: function() {
-            return this.name || "lot-digital-write";
+        button: {
+            enabled: function() {
+                return !this.changed;
+            },
+            onclick: function() {
+                $.ajax({
+                    url: "lot.Gpio.toggle/" + this.id,
+                    type: "POST",
+                    error: function(jqXHR, textStatus, errorThrown) {
+                        if (jqXHR.status == 404) {
+                            RED.notify(
+                                node._("common.notification.error", {
+                                    message: node._(
+                                        "common.notification.errors.not-deployed"
+                                    )
+                                }),
+                                "error"
+                            );
+                        } else if (jqXHR.status == 500) {
+                            RED.notify(
+                                node._("common.notification.error", {
+                                    message: node._("inject.errors.failed")
+                                }),
+                                "error"
+                            );
+                        } else if (jqXHR.status == 0) {
+                            RED.notify(
+                                node._("common.notification.error", {
+                                    message: node._(
+                                        "common.notification.errors.no-response"
+                                    )
+                                }),
+                                "error"
+                            );
+                        } else {
+                            RED.notify(
+                                node._("common.notification.error", {
+                                    message: node._(
+                                        "common.notification.errors.unexpected",
+                                        {
+                                            status: jqXHR.status,
+                                            message: textStatus
+                                        }
+                                    )
+                                }),
+                                "error"
+                            );
+                        }
+                    }
+                });
+            }
         },
-        inputLabels: "Pin",
+        label: function() {
+            return this.name;
+        },
+        inputLabels: "Any msg",
         outputLabels: "Status"
     });
 </script>
 
-<script type="text/x-red" data-template-name="lot-digital-write">
+<script type="text/x-red" data-template-name="lot.Gpio.toggle">
     <div class="form-row">
-        <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="lot.Gpio.toggle">
     </div>
     <div class="form-row">
-        <label for="node-input-pin"><i class="icon-tag"></i> Pin</label>
-        <input type="number" id="node-input-pin" placeholder="Pin">
+        <label for="node-input-pin"><i class="fa fa-tag"></i> Pin</label>
+        <input type="number" id="node-input-pin">
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="lot-digital-write">
+<script type="text/x-red" data-help-name="lot.Gpio.mode">
     <p></p>
 </script>
