Revise lot.Gpio.toggle

--- a/nodes/gpio.html
+++ b/nodes/gpio.html
@@ -201,7 +201,7 @@
             return this.name;
         },
         inputLabels: "Any msg",
-        outputLabels: "Status"
+        outputLabels: "msg.payload.status"
     });
 </script>
 
