--- a/nodes/gpio.html
+++ b/nodes/gpio.html
@@ -26,7 +26,6 @@
 -->
 
 <!--
-    lot.Gpio(pin)
     lot.Gpio.mode(mode)
 -->
 
@@ -110,7 +109,7 @@
 <script type="text/x-red" data-template-name="lot.Gpio.pull_up_down">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="lot.Gpio.mode">
+        <input type="text" id="node-input-name" placeholder="lot.Gpio.pull_up_down">
     </div>
     <div class="form-row">
         <label for="node-input-pin"><i class="fa fa-tag"></i> Pin</label>
@@ -127,6 +126,49 @@
 </script>
 
 <script type="text/x-red" data-help-name="lot.Gpio.pull_up_down">
+    <p></p>
+</script>
+
+<!--
+    lot.Gpio.drive()
+ -->
+
+<script type="text/javascript">
+    RED.nodes.registerType("lot.Gpio.drive", {
+        category: "lot.Gpio",
+        color: "#aabbee",
+        defaults: {
+            name: { value: "lot.Gpio.drive" },
+            pin: { value: "", required: true, type: "lot.pin" },
+            drive: { value: null, required: true, validate:RED.validators.number() }
+        },
+        inputs: 1,
+        outputs: 1,
+        icon: "font-awesome/fa-dashboard",
+        label: function() {
+            return this.name;
+        },
+        inputLabels: "msg.payload.drive",
+        outputLabels: "msg.payload.drive"
+    });
+</script>
+
+<script type="text/x-red" data-template-name="lot.Gpio.drive">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="lot.Gpio.drive">
+    </div>
+    <div class="form-row">
+        <label for="node-input-pin"><i class="fa fa-tag"></i> Pin</label>
+        <input type="number" id="node-input-pin">
+    </div>
+    <div class="form-row">
+        <label for="node-input-drive"><i class="fa fa-tag"></i> Drive</label>
+        <input type="number" id="node-input-drive" placeholder="drive">
+    </div>
+</script>
+
+<script type="text/x-red" data-help-name="lot.Gpio.drive">
     <p></p>
 </script>
 
