--- a/nodes/gpio.html
+++ b/nodes/gpio.html
@@ -140,7 +140,11 @@
         defaults: {
             name: { value: "lot.Gpio.drive" },
             pin: { value: "", required: true, type: "lot.pin" },
-            drive: { value: null, required: true, validate:RED.validators.number() }
+            drive: {
+                value: null,
+                required: true,
+                validate: RED.validators.number()
+            }
         },
         inputs: 1,
         outputs: 1,
@@ -169,6 +173,44 @@
 </script>
 
 <script type="text/x-red" data-help-name="lot.Gpio.drive">
+    <p></p>
+</script>
+
+<!--
+    lot.Gpio.digital()
+ -->
+
+<script type="text/javascript">
+    RED.nodes.registerType("lot.Gpio.digital", {
+        category: "lot.Gpio",
+        color: "#aabbee",
+        defaults: {
+            name: { value: "lot.Gpio.digital" },
+            pin: { value: "", required: true, type: "lot.pin" }
+        },
+        inputs: 1,
+        outputs: 1,
+        icon: "light.svg",
+        label: function() {
+            return this.name;
+        },
+        inputLabels: "msg.payload.status",
+        outputLabels: "msg.payload.status"
+    });
+</script>
+
+<script type="text/x-red" data-template-name="lot.Gpio.digital">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="lot.Gpio.digital">
+    </div>
+    <div class="form-row">
+        <label for="node-input-pin"><i class="fa fa-tag"></i> Pin</label>
+        <input type="number" id="node-input-pin">
+    </div>
+</script>
+
+<script type="text/x-red" data-help-name="lot.Gpio.digital">
     <p></p>
 </script>
 
