--- a/nodes/gpio.html
+++ b/nodes/gpio.html
@@ -401,3 +401,41 @@
 <script type="text/x-red" data-help-name="lot.Gpio.toggle">
     <p></p>
 </script>
+
+<!--
+    lot.Gpio.analog()
+ -->
+
+<script type="text/javascript">
+    RED.nodes.registerType("lot.Gpio.analog", {
+        category: "lot.Gpio",
+        color: "#aabbee",
+        defaults: {
+            name: { value: "lot.Gpio.analog" },
+            pin: { value: "", required: true, type: "lot.pin" }
+        },
+        inputs: 1,
+        outputs: 1,
+        icon: "font-awesome/fa-sliders",
+        label: function() {
+            return this.name;
+        },
+        inputLabels: "msg.payload.value",
+        outputLabels: "msg.payload.value"
+    });
+</script>
+
+<script type="text/x-red" data-template-name="lot.Gpio.analog">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="lot.Gpio.analog">
+    </div>
+    <div class="form-row">
+        <label for="node-input-pin"><i class="fa fa-tag"></i> Pin</label>
+        <input type="number" id="node-input-pin">
+    </div>
+</script>
+
+<script type="text/x-red" data-help-name="lot.Gpio.analog">
+    <p></p>
+</script>
